RESOLVED FIXED255234
Regression(262749@main) Assertion failures under LegacyCustomProtocolManager::addCustomProtocol(WTF::RetainPtr<WKCustomProtocol>&&)
https://bugs.webkit.org/show_bug.cgi?id=255234
Summary Regression(262749@main) Assertion failures under LegacyCustomProtocolManager:...
Chris Dumez
Reported 2023-04-10 10:23:43 PDT
Assertion failure under LegacyCustomProtocolManager::addCustomProtocol(WTF::RetainPtr<WKCustomProtocol>&&).
Attachments
Radar WebKit Bug Importer
Comment 1 2023-04-10 10:24:09 PDT
Chris Dumez
Comment 2 2023-04-10 10:25:28 PDT
EWS
Comment 3 2023-04-10 10:39:32 PDT
Committed 262773@main (9e6ab96d74e2): <https://commits.webkit.org/262773@main> Reviewed commits have been landed. Closing PR #12575 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.