Regression(262749@main) Assertion failures under LegacyCustomProtocolManager::addCustomProtocol(WTF::RetainPtr<WKCustomProtocol>&&) https://bugs.webkit.org/show_bug.cgi?id=255234 rdar://107838623

Reviewed by Yusuke Suzuki.

Switch to an AtomicObjectIdentifier since generate() is being called off the main thread.

* Source/WebKit/NetworkProcess/CustomProtocols/LegacyCustomProtocolID.h:

Canonical link: https://commits.webkit.org/262773@main